tests/error/test_undefined_var.fg
# Error test: using undefined variables should be caught
# Expected: checker error about undefined variable

proc main() -> void:
    print(undefined_variable)

